<resources>
    <string name="app_name">Fizzler</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="home">Home</string>
    <string name="friends">Friends</string>
    <string name="find_friends">Find Friends</string>
    <string name="message">Message</string>
    <string name="Settings">Settings</string>
    <string name="Logout">Logout</string>
    <string name="Createnewaccount">SIGN UP</string>
    <string name="account">Account</string>
    <string name="register">REGISTER</string>
    <string name="please_enter_your_password">Please Enter your password</string>
    <string name="please_confirm_your_password">Please Confirm Your Password</string>
    <string name="please_enter_your_email">Please Enter your email</string>
    <string name="title_activity_register">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_up">SIGN UP</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">UserName</string>
    <string name="click_to_login">CLICK TO LOGIN.</string>
    <string name="email">Email</string>
</resources>
