<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"

    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/home"
            />
        <item
            android:id="@+id/message_aa"
            android:title="@string/message"
            android:icon="@drawable/ic_send_message"
            />
        <item
            android:id="@+id/friends"
            android:title="@string/friends"
            android:icon="@drawable/friends"/>
        <item
            android:id="@+id/find_friends"
            android:title="@string/find_friends"
            android:icon="@drawable/find_people"/>
        <item
            android:id="@+id/newpst"
            android:title="Add New Post"
            android:icon="@drawable/plusl"/>



        <item
            android:id="@+id/settings"
            android:title="@string/Settings"
            android:icon="@drawable/settings"/>
    </group>

    <item android:title="@string/account" >
        <menu>
            <item
                android:id="@+id/profilenew"
                android:title="Profile"
                android:icon="@drawable/find_people"/>
            <item
                android:id="@+id/Logout"
                android:title="@string/Logout"
                android:icon="@drawable/logout"/>
            <item
                android:id="@+id/signup"
                android:title="@string/Createnewaccount"
                android:icon="@drawable/signup"/>
            <item
                android:id="@+id/login"
                android:title="Sign In"
                android:icon="@drawable/signin"/>

        </menu>

    </item>

</menu>
